samples/_failures_safe/1761592859_cc60cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dd39f15.c: In function ‘tokenize’:
./samples/SAFE/__tmp_0dd39f15.c:163:9: error: expected declaration or statement at end of input
  163 |         if (success) {
      |         ^~
./samples/SAFE/__tmp_0dd39f15.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dd39f15.c:163:9: error: expected declaration or statement at end of input
